--- a/public/stylesheets/twitter/forms.less
+++ b/public/stylesheets/twitter/forms.less
@@ -36,7 +36,9 @@ label,
 input,
 select,
 textarea {
-  #font > .sans-serif(normal,13px,normal);
+    font-family: inherit;
+    color: inherit;
+//  #font > .sans-serif(normal,13px,normal);
 }
 
 // Float labels left
