--- a/public/stylesheets/application.less
+++ b/public/stylesheets/application.less
@@ -4,22 +4,31 @@ html, body {
     height: 100%;
     font-family: 'Open Sans', sans-serif;
 
-    #main-container {
+    .main-container {
         position: relative;
         min-height: 100%;
 
+        .navigation {
+            right: -5px;
+
+            li {
+                display: inline-block;
+                padding: 0 15px;
+
+                a {
+                    font-weight: bold; }}}
+
         header, footer {
-            text-shadow: 1px 1px 2px #000;
+            text-shadow: 1px 1px 2px #000; }
 
-            > div {
-                position: relative;
-                > * {
-                    position: absolute;
-                }
-            }
-        }
+        > header, > footer {
+            > div > * {
+                position: absolute; }
 
-        header {
+            a, &:active, &:visited, &:hover {
+                color: #FFF; }}
+
+        > header {
             background: #FFF url(../images/layout/background_header.jpg) no-repeat;
             border-top: 5px solid #333;
 
@@ -27,31 +36,94 @@ html, body {
                 height: 85px;
 
                 h1 {
-                    top: 23px;
-                }
+                    top: 23px; }
 
                 .account {
                     background-color: #333;
+                    right: 10px;
                     top: -5px;
                     .border-radius(5px);
                     padding-bottom: 2px;
 
+                    li {
+                        display: inline-block;
+                        padding: 0 10px;
 
-                    a {
-                        margin: 0 10px;
-                        font-size: 12px;
-                    }
-                }
+                        a {
+                            font-size: 12px; }}}
 
                 .navigation {
-                    top: 45px;
-                }
-            }
-        }
+                    top: 45px; }}}
 
-        #main-content {
-            padding: 15px 0 150px 0;
-        }
+        section.body {
+            header.body {
+                background: #FFF url(../images/layout/background_body_header.png) repeat-x;
+                height: 143px;
+
+                .back-to-catalog {
+                    font-size: 15px;
+                    font-weight: bold;
+                    text-decoration: underline;
+                    color: #FFF;
+
+                    &:active, &:visited, &:hover {
+                        color: #FFF; }
+
+                    &:hover {
+                        text-decoration: none; }}
+
+                .addthis {
+                    position: absolute;
+                    right: 10px;
+                    top: 40px;
+
+                    p {
+                        margin-left: 2px;
+                        margin-bottom: 5px;
+                        font-weight: bold; }}
+
+                h2, h3, h4, p {
+                    color: #FFF; }
+
+                h2, h3, h4 {
+                    width: 690px; }
+
+                h3 {
+                    margin: 15px 0;
+                    font-size: 35px; }
+
+                h4 {
+                    font-size: 18px;
+                    line-height: 1.5em; }
+
+                &.search {
+                    h3 {
+                        font-size: 25px; }
+
+                    .add-on {
+                        padding: 4px 8px;
+                        height: 30px; }
+
+                    input {
+                        padding: 10px;
+                        font-size: 18px; }}
+
+                &.company {
+                    background: #FFF url(../images/layout/background_content_header.png) repeat-x;
+                    height: 101px;
+
+                    .back-to-catalog {
+                        display: block;
+                        margin: 10px 0 15px; }
+
+                    h2 {
+                        font-size: 35px; }
+
+                    .addthis {
+                        top: 19px; }}}
+
+            .main-content {
+                padding: 15px 10px 150px; }}
 
         footer {
             background: #FFF url(../images/layout/background_footer.png) repeat-x;
@@ -62,61 +134,29 @@ html, body {
             height: 143px;
             color: #FFF;
 
+            .logo, .navigation {
+                top: 15px; }
+
             .disclaimer {
+                top: 55px;
                 width: 390px;
                 font-size: 13px;
 
                 strong {
                     font-weight: normal;
-                    color: @s-green;
-                }
-            }
-
-            .logo, .navigation {
-                top: 15px;
-            }
-
-            .disclaimer {
-                top: 55px;
-            }
+                    color: @s-green; }}
 
             .payment-methods {
                 left: 420px;
                 top: 55px;
 
                 p {
-                    font-size: 13px;
-                }
-            }
+                    font-size: 13px; }}
 
             .powered-by {
                 right: 10px;
                 top: 115px;
-                font-size: 12px;
-            }
-        }
+                font-size: 12px; }}}}
 
-        .account, .navigation {
-            right: 10px;
-
-            li {
-                display: inline-block;
-
-                a, &:active, &:visited, &:hover {
-                    color: #FFF;
-                }
-            }
-        }
-
-        .navigation {
-            a {
-                margin: 0 15px;
-                font-weight: bold;
-            }
-
-            li:last-child a {
-                margin-right: 0;
-            }
-        }
-    }
-}
+@import 'buttons.less';
+@import '_advertise.less';
