--- a/public/stylesheets/twitter/mixins.less
+++ b/public/stylesheets/twitter/mixins.less
@@ -6,16 +6,15 @@
 // Clearfix for clearing floats like a boss h5bp.com/q
 .clearfix() {
   zoom: 1;
-	&:before,
-  &:after {
+  &:before, &:after {
     display: table;
     content: "";
     zoom: 1;
     *display: inline;
-	}
-	&:after {
+  }
+  &:after {
     clear: both;
-	}
+  }
 }
 
 // Center-align a block level element
