--- a/public/stylesheets/twitter/scaffolding.less
+++ b/public/stylesheets/twitter/scaffolding.less
@@ -19,6 +19,7 @@ body {
 // Container (centered, fixed-width layouts)
 .container {
   .fixed-container();
+  position: relative;
   padding: 0 10px;
 }
 
