--- a/app/views/_advertise.html.slim
+++ b/app/views/_advertise.html.slim
@@ -5,6 +5,6 @@ section.advertise
             ul
                 li == '<strong>Você mesmo</strong> publica e atualiza seus produtos e serviços de forma <strong>rápida e elegante</strong>.'
                 li == 'Isso e muito mais por apenas <strong class="price">R$<span class="integer">24</span><span class="decimal">,90</span></strong> por mês, além de ganhar <strong class="price">30 DIAS GRÁTIS</strong> para experimentar.'
-            a.s-alternative-button href='#' title='Saiba mais sobre o serviço' SAIBA MAIS
-            a.s-action-button href='#' title='Experimente grátis por 30 dias' EXPERIMENTE GRÁTIS »
+            = link_to 'SAIBA MAIS', know_more_path, title: 'Saiba mais sobre o serviço', class: 's-alternative-button'
+            = link_to 'EXPERIMENTE GRÁTIS »', try_for_free_path, title: 'Experimente grátis por 30 dias', class: 's-action-button'
         a.pull-right href='javascript:void(0)' title='Assista ao vídeo que preparamos para você' data-controls-modal='advertise-video' data-backdrop='true' data-keyboard='true' = image_tag('advertise_video.png', alt: 'Vídeo no Youtube')
