--- a/app/views/_navigation.html.slim
+++ b/app/views/_navigation.html.slim
@@ -1,6 +1,6 @@
 ul.navigation
-    li = link_to 'Home', '/#'
-    li = link_to 'Saiba Mais', '/#'
-    li = link_to 'Experimente Grátis', '/#'
-    li = link_to 'Fale Conosco', '/#'
+    li = link_to 'Home', root_path
+    li = link_to 'Saiba Mais', know_more_path
+    li = link_to 'Experimente Grátis', try_for_free_path
+    li = link_to 'Fale Conosco', 'javascript:void(0)', {'data-controls-modal' => 'contact-us', 'data-backdrop' => 'true', 'data-keyboard' => 'true'}
     li = link_to 'Ajuda', '/#'
