--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -17,9 +17,9 @@ html
                 div.container
                     h1 = link_to image_tag('layout/logo.png', alt: 'sirva.me'), root_path, title: page_title
                     ul.account
-                        li = link_to 'Minha Conta', '/#'
-                        li = link_to 'Meu Mini-Site', '/#'
-                        li = link_to 'Feedback', '/#'
+                        li = link_to 'Minha Conta', 'javascript:void(0)', {'data-controls-modal' => 'login', 'data-backdrop' => 'true', 'data-keyboard' => 'true'}
+                        li = link_to 'Meu Mini-Site', 'javascript:void(0)', {'data-controls-modal' => 'login', 'data-backdrop' => 'true', 'data-keyboard' => 'true'}
+                        li = link_to 'Feedback', 'javascript:void(0)', {'data-controls-modal' => 'feedback', 'data-backdrop' => 'true', 'data-keyboard' => 'true'}
                     == render partial: './navigation'
             section.body
                 == yield
@@ -32,17 +32,6 @@ html
                         = image_tag 'layout/payment_methods.png', alt: 'PagSeguro, Visa, MasterCard, Diners, American Express, Bradesco, Itaú, Banco do Brasil, Boleto'
                     == render partial: './navigation'
                     span.powered-by !improviso!
-
         div.modals
-            div#advertise-video.modal.hide.fade
-                div.modal-header
-                    a.close href='javascript:void(0)' title='Fechar' &times;
-                    h3 Apresentação: entenda como o sirva.me funciona.
-                div.modal-body
-                    iframe width='800' height='480' src='http://www.youtube.com/embed/Mw4Ombo83lw' frameborder='0' allowfullscreen='allowfullscreen'
-                div.modal-footer
-                    div.pull-right
-                        a.s-alternative-button.small href='#' title='Saiba mais sobre o serviço' SAIBA MAIS
-                        a.s-action-button.small href='#' title='Experimente grátis por 30 dias' EXPERIMENTE GRÁTIS »
-
+            == render partial: './modals'
         = javascript_include_tag :defaults
