Saiba Mais e Experimente Grátis.

--- a/app/views/_advertise.html.slim
+++ b/app/views/_advertise.html.slim
@@ -7,4 +7,4 @@ section.advertise
                 li == 'Isso e muito mais por apenas <strong class="price">R$<span class="integer">24</span><span class="decimal">,90</span></strong> por mês, além de ganhar <strong class="price">30 DIAS GRÁTIS</strong> para experimentar.'
             = link_to 'SAIBA MAIS', know_more_path, title: 'Saiba mais sobre o serviço', class: 's-alternative-button'
             = link_to 'EXPERIMENTE GRÁTIS »', try_for_free_path, title: 'Experimente grátis por 30 dias', class: 's-action-button'
-        a.pull-right href='javascript:void(0)' title='Assista ao vídeo que preparamos para você' data-controls-modal='advertise-video' data-backdrop='true' data-keyboard='true' = image_tag('advertise_video.png', alt: 'Vídeo no Youtube')
+        a.pull-right href='javascript:void(0)' title='Apresentação: entenda como o sirva.me funciona' data-controls-modal='advertise-video' data-backdrop='true' data-keyboard='true' = image_tag('advertise_video.png', alt: 'Vídeo no Youtube')
