--- a/public/stylesheets/application.less
+++ b/public/stylesheets/application.less
@@ -1,5 +1,7 @@
 @import 'twitter/bootstrap.less';
 
+.clear { clear: both }
+
 html, body {
     height: 100%;
     font-family: 'Open Sans', sans-serif;
@@ -106,6 +108,7 @@ html, body {
 
                     input {
                         padding: 10px;
+                        width: 570px;
                         font-size: 18px; }}
 
                 &.company {
@@ -160,3 +163,4 @@ html, body {
 
 @import 'buttons.less';
 @import '_advertise.less';
+@import 'company.new.less';
