--- a/public/stylesheets/buttons.less
+++ b/public/stylesheets/buttons.less
@@ -60,3 +60,6 @@
 
         &.on, &:active {
             background-position: left -35px; }}}
+
+input.s-action-button, input.s-alternative-button {
+    width: auto; }
