--- a/public/stylesheets/twitter/type.less
+++ b/public/stylesheets/twitter/type.less
@@ -41,7 +41,7 @@ h2 {
     font-size: 14px;
   }
 }
-h3, h4, h5, h6 {
+h3, h4 {
   line-height: @baseline * 2;
 }
 h3 {
@@ -62,7 +62,6 @@ h5 {
 h6 {
   font-size: 13px;
   color: @grayLight;
-  text-transform: uppercase;
 }
 
 
@@ -184,4 +183,4 @@ pre {
   white-space: pre-wrap;
   word-wrap: break-word;
 
-}
+}  
