--- a/app/views/company/index.html.slim
+++ b/app/views/company/index.html.slim
@@ -3,8 +3,8 @@ header.body.search
     div.container
         h3 Encontre o que precisa, em Valença:
         div.input-prepend
-            span.add-on = image_tag 'zoom_tool.png', alt: 'Zoom Tool'
-            input.span10 type='text' placeholder='Exemplos: pizza, lanche, restaurante do zé... e tecle ENTER!'
+            span.add-on = image_tag 'zoom_tool.png', alt: 'Lupa'
+            input type='text' placeholder='Exemplos: pizza, lanche, restaurante do zé... e tecle ENTER!'
         == render partial: './addthis'
 /!header.body.company
     div.container
