--- a/public/stylesheets/twitter/forms.less
+++ b/public/stylesheets/twitter/forms.less
@@ -146,7 +146,8 @@ textarea {
   .transition(@transition);
   .box-shadow(inset 0 1px 3px rgba(0,0,0,.1));
 }
-input:focus,
+input[type=text]:focus,
+input[type=password]:focus,
 textarea:focus {
   outline: 0;
   border-color: rgba(82,168,236,.8);
