--- a/public/stylesheets/company.new.less
+++ b/public/stylesheets/company.new.less
@@ -45,7 +45,7 @@
                 font-size: 14px; 
                 line-height: 1.4em; }
 
-            &.last {
+            &.last-f {
                 width: 478px; }
 
             &.f-1 { background-position: 0 0; }
@@ -56,7 +56,7 @@
             &.f-6 { background-position: 0 -1000px; }
             &.f-7 { background-position: 0 -1200px; }
             &.f-8 { background-position: 0 -1400px; }
-            &.f-9 { background-position: 0 -1595px; }}}}
+            &.last-f { background-position: 0 -1595px; }}}}
 
 .create-account {
     position: relative;
