--- a/public/stylesheets/twitter/variables.less
+++ b/public/stylesheets/twitter/variables.less
@@ -2,10 +2,12 @@
  * Variables to customize the look and feel of Bootstrap
  * ----------------------------------------------------- */
 
+// Sirva.me Colors
+@s-green:           #99CC00;
 
 // Links
-@linkColor:         #0069d6;
-@linkColorHover:    darken(@linkColor, 15);
+@linkColor:         darken(@s-green, 20);
+@linkColorHover:    darken(@linkColor, 10);
 
 // Grays
 @black:             #000;
@@ -24,9 +26,6 @@
 @orange:            #f89406;
 @pink:              #c3325f;
 @purple:            #7a43b6;
-
-// Sirva.me Colors
-@s-green:           #99CC00;
 
 // Baseline grid
 @basefont:          14px;
