--- a/public/stylesheets/application.less
+++ b/public/stylesheets/application.less
@@ -2,6 +2,21 @@
 
 .clear { clear: both }
 
+small.error {
+    display: block;
+    font-size: 13px;
+    font-weight: bold;
+    color: #B00; }
+
+.popover {
+    .company-url, small {
+        display: block;
+        margin: 10px 0;
+        color: #333; }
+
+    small {
+        line-height: 1.5em; }}
+
 html, body {
     height: 100%;
     font-family: 'Open Sans', sans-serif;
