Favicon Icon melhorado. Importação da fonte Open Sans melhorada.

--- a/public/stylesheets/_advertise.less
+++ b/public/stylesheets/_advertise.less
@@ -1,5 +1,5 @@
 .advertise {
-    background: #FFF url(../images/layout/background_header.jpg) no-repeat 0 -85px;
+    background: #FFF url(../images/layout/background_header.jpg) no-repeat center -85px;
     padding: 30px 0;
 
     .reasons {
