--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,7 +5,7 @@ html
         title = page_title
         = csrf_meta_tag
         = favicon_link_tag '/favicon.png'
-        = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Open+Sans:400,700'
+        = stylesheet_link_tag 'fonts/fonts'
         = stylesheet_link_tag 'application.less', rel: 'stylesheet/less'
         = stylesheet_link_tag 'pie'
         = javascript_include_tag 'less'
