--- a/public/stylesheets/application.less
+++ b/public/stylesheets/application.less
@@ -46,7 +46,7 @@ html, body {
                 color: #FFF; }}
 
         > header {
-            background: #FFF url(../images/layout/background_header.jpg) no-repeat;
+            background: #FFF url(../images/layout/background_header.jpg) no-repeat center top;
             border-top: 5px solid #333;
 
             > div {
