Correção nas cores dos inputs do formulário de nova conta. Correção no alinhamento dos labels dos períodos de pagamento. Correção no padding do conteúdo principal.

--- a/public/stylesheets/company.new.less
+++ b/public/stylesheets/company.new.less
@@ -89,18 +89,19 @@
                 font-size: 20px;
                 font-weight: bold; }}}
 
-    label {
+    label, div {
         display: block;
         margin: 10px 0;
         font-size: 14px;
+        font-weight: bold;
 
         input[type=text], input[type=password] {
             margin-top: 5px;
             width: 340px; }
 
-        > label {
+        .payment-period {
             float: left;
-            margin-right: 15px;
+            margin: 5px 15px 0 0;
             font-weight: normal; }}
 
     input[type=submit] {
