--- a/public/stylesheets/twitter/forms.less
+++ b/public/stylesheets/twitter/forms.less
@@ -71,10 +71,10 @@ select,
   display: inline-block;
   width: 210px;
   height: @baseline;
-  padding: 4px;
+  padding: 5px;
   font-size: @basefont;
   line-height: @baseline;
-  color: @gray;
+  color: inherit;
   border: 1px solid #ccc;
   .border-radius(3px);
 }
