--- a/public/stylesheets/application.less
+++ b/public/stylesheets/application.less
@@ -60,7 +60,7 @@ html, body {
                     right: 10px;
                     top: -5px;
                     .border-radius(5px);
-                    padding-bottom: 2px;
+                    padding: 2px 0;
 
                     li {
                         display: inline-block;
@@ -141,7 +141,7 @@ html, body {
                         top: 19px; }}}
 
             .main-content {
-                padding: 15px 10px 150px; }}
+                padding: 15px 10px 158px; }}
 
         footer {
             background: #FFF url(../images/layout/background_footer.png) repeat-x;
