Melhorias visuais em alguns parágrafos e links.

--- a/public/stylesheets/application.less
+++ b/public/stylesheets/application.less
@@ -8,6 +8,13 @@ small.error {
     font-weight: bold;
     color: #B00; }
 
+.modal {
+    a {
+        text-decoration: underline;
+
+        &:hover {
+            text-decoration: none; }}}
+
 .popover {
     .company-url, small {
         display: block;
@@ -141,7 +148,13 @@ html, body {
                         top: 19px; }}}
 
             .main-content {
-                padding: 15px 10px 158px; }}
+                padding: 15px 10px 158px;
+
+                a {
+                    text-decoration: underline;
+
+                    &:hover {
+                        text-decoration: none; }}}}
 
         footer {
             background: #FFF url(../images/layout/background_footer.png) repeat-x;
