--- a/public/stylesheets/buttons.less
+++ b/public/stylesheets/buttons.less
@@ -10,6 +10,7 @@
     font-weight: bold;
     color: #FFF;
     text-shadow: 1px 1px 2px #000;
+    text-decoration: none !important;
     cursor: pointer;
 
     &.medium, &.small {
