remove advertise from layout

--- a/app/views/company/index.html.slim
+++ b/app/views/company/index.html.slim
@@ -1,4 +1,4 @@
-== render partial: './advertise'
+/!== render partial: './advertise'
 header.body.search
     div.container
         h3 Encontre o que precisa, em Valença:
