--- a/app/views/_modals.html.slim
+++ b/app/views/_modals.html.slim
@@ -1,4 +1,4 @@
-div#advertise-video.modal.hide.fade
+/!div#advertise-video.modal.hide.fade
     div.modal-header
         a.close href='javascript:void(0)' title='Fechar' &times;
         h3 Apresentação: entenda como o sirva.me funciona.
@@ -20,7 +20,7 @@ div#contact-us.modal.hide.fade
             a.s-alternative-button.small.cancel href='#' title='Cancelar' CANCELAR
             a.s-action-button.small href='#' title='Enviar' ENVIAR »
 
-div#feedback.modal.hide.fade
+/!div#feedback.modal.hide.fade
     div.modal-header
         a.close href='javascript:void(0)' title='Fechar' &times;
         h3 Envie seu Feedback
@@ -31,7 +31,7 @@ div#feedback.modal.hide.fade
             a.s-alternative-button.small.cancel href='#' title='Cancelar' CANCELAR
             a.s-action-button.small href='#' title='Enviar Feedback' ENVIAR FEEDBACK »
 
-div#login.modal.hide.fade
+/!div#login.modal.hide.fade
     div.modal-header
         a.close href='javascript:void(0)' title='Fechar' &times;
         h3 Entrar no Sistema
@@ -43,7 +43,7 @@ div#login.modal.hide.fade
             a.s-action-button.small href='#' title='Entrar' ENTRAR »
         a.other-modal href='#' data-controls-modal='remember-password' data-backdrop='true' data-keyboard='true' Recuperar Senha
 
-div#remember-password.modal.hide.fade
+/!div#remember-password.modal.hide.fade
     div.modal-header
         a.close href='javascript:void(0)' title='Fechar' &times;
         h3 Recuperar Senha
