--- a/app/views/company/index.html.slim
+++ b/app/views/company/index.html.slim
@@ -1,10 +1,10 @@
 /!== render partial: './advertise'
 header.body.search
     div.container
-        h3 Encontre o que precisa, em Valença:
+        h3 Encontre o que precisa:
         div.input-prepend
             span.add-on = image_tag 'zoom_tool.png', alt: 'Lupa'
-            input type='text' placeholder='Exemplos: pizza, lanche, restaurante do zé... e tecle ENTER!'
+            input type='text' placeholder='Exemplos: pizza, lanche, bar do zé... e aperte ENTER!'
         == render partial: './addthis'
 /!header.body.company
     div.container
