--- a/public/stylesheets/application.less
+++ b/public/stylesheets/application.less
@@ -57,10 +57,10 @@ html, body {
             border-top: 5px solid #333;
 
             > div {
-                height: 85px;
+                height: 55px;
 
                 h1 {
-                    top: 23px; }
+                    top: 9px; }
 
                 .account {
                     background-color: #333;
@@ -77,7 +77,7 @@ html, body {
                             font-size: 12px; }}}
 
                 .navigation {
-                    top: 45px; }}}
+                    top: 18px; }}}
 
         section.body {
             header.body {
@@ -162,11 +162,14 @@ html, body {
             bottom: 0;
             padding: 0;
             width: 100%;
-            height: 143px;
+            height: 55px;
             color: #FFF;
 
-            .logo, .navigation {
-                top: 15px; }
+            .logo {
+                top: 16px; }
+
+            .navigation {
+                top: 22px; }
 
             .disclaimer {
                 top: 55px;
