add style to search result items

--- a/app/views/company/index.html.slim
+++ b/app/views/company/index.html.slim
@@ -12,4 +12,16 @@ header.body.search
         h2 Padaria Ki-Sabor
         == render partial: './addthis'
 div.container.main-content
-    p Company Index
+    ul.search-results
+        li.plus Anúncio 1.1
+        li.plus Anúncio 1.2
+        li.plus Anúncio 1.3
+        li Anúncio 2.1
+        li Anúncio 2.2
+        li Anúncio 2.3
+        li Anúncio 3.1
+        li Anúncio 3.2
+        li Anúncio 3.3
+        li Anúncio 4.1
+        li Anúncio 4.2
+        li Anúncio 4.3
