--- a/public/stylesheets/application.less
+++ b/public/stylesheets/application.less
@@ -148,13 +148,30 @@ html, body {
                         top: 19px; }}}
 
             .main-content {
-                padding: 15px 10px 158px;
+                padding: 15px 10px 70px;
 
                 a {
                     text-decoration: underline;
 
                     &:hover {
-                        text-decoration: none; }}}}
+                        text-decoration: none; }}
+
+                .search-results {
+                    list-style: none;
+                    margin: -10px;
+
+                    li {
+                        display: inline-block;
+                        margin: 10px;
+                        border: 3px solid #999;
+                        padding: 6px 5px;
+                        width: 288px;
+                        height: 110px;
+                        color: #666;
+
+                        &.plus {
+                            border: 3px solid #333;
+                            color: #333; }}}}}
 
         footer {
             background: #FFF url(../images/layout/background_footer.png) repeat-x;
