--- a/public/stylesheets/application.less
+++ b/public/stylesheets/application.less
@@ -154,24 +154,7 @@ html, body {
                     text-decoration: underline;
 
                     &:hover {
-                        text-decoration: none; }}
-
-                .search-results {
-                    list-style: none;
-                    margin: -10px;
-
-                    li {
-                        display: inline-block;
-                        margin: 10px;
-                        border: 3px solid #999;
-                        padding: 6px 5px;
-                        width: 288px;
-                        height: 110px;
-                        color: #666;
-
-                        &.plus {
-                            border: 3px solid #333;
-                            color: #333; }}}}}
+                        text-decoration: none; }}}}
 
         footer {
             background: #FFF url(../images/layout/background_footer.png) repeat-x;
@@ -211,4 +194,5 @@ html, body {
 
 @import 'buttons.less';
 @import '_advertise.less';
+@import 'company.index.less';
 @import 'company.new.less';
