better style do search results

--- a/public/stylesheets/application.less
+++ b/public/stylesheets/application.less
@@ -25,6 +25,7 @@ small.error {
         line-height: 1.5em; }}
 
 html, body {
+    background-image: url(../images/layout/background_body.png);
     height: 100%;
     font-family: 'Open Sans', sans-serif;
 
