--- a/public/stylesheets/company.index.less
+++ b/public/stylesheets/company.index.less
@@ -3,9 +3,11 @@
     margin: -10px;
 
     li {
+        background-color: #FFF;
         float: left;
         margin: 10px;
         border: 3px solid #999;
+        .border-radius();
         padding: 6px 5px;
         width: 290px;
         height: 110px;
