--- a/app/views/company/index.html.slim
+++ b/app/views/company/index.html.slim
@@ -4,7 +4,7 @@ header.body.search
         h3 Encontre o que precisa:
         div.input-prepend
             span.add-on = image_tag 'zoom_tool.png', alt: 'Lupa'
-            input#search type='text' placeholder='Exemplos: pizza, lanche, bar do zé... e aperte ENTER!'
+            input type='text' placeholder='Exemplos: pizza, lanche, bar do zé... e aperte ENTER!'
         == render partial: './addthis'
 /!header.body.company
     div.container
