--- a/app/views/company/index.html.slim
+++ b/app/views/company/index.html.slim
@@ -1,10 +1,10 @@
 /!== render partial: './advertise'
 header.body.search
-    form.container
+    form.container action="#{search_path}" method='get'
         h3 Encontre o que precisa:
         div.input-prepend
             span.add-on = image_tag 'zoom_tool.png', alt: 'Lupa'
-            input type='text' placeholder='Exemplos: pizza, lanche, bar do zé... e aperte ENTER!'
+            input type='text' name='search_params' value="#{params[:search_params]}" placeholder='Exemplos: pizza, lanche, bar do zé... e aperte ENTER!'
         == render partial: './addthis'
 /!header.body.company
     div.container
