add shadow to search results

--- a/public/stylesheets/company.index.less
+++ b/public/stylesheets/company.index.less
@@ -11,26 +11,20 @@
         padding: 6px 5px;
         width: 290px;
         height: 110px;
+        .box-shadow(2px 2px 3px rgba(100, 100, 100, .4));
         color: #666;
-        overflow: hidden;
 
         p {
             margin-bottom: 4px;
-            height: 18px;
-            overflow: hidden;
 
             &.name {
                 margin-bottom: 8px;
                 font-size: 1.3em;
                 font-weight: bold;
-                text-shadow: 1px 1px 1px #ccc;
-                overflow: visible; }
+                text-shadow: 1px 1px 1px #ccc; }
 
             &.phone, &.address {
                 font-size: .9em; }
-
-            &.address {
-                height: 36px; }
 
             &.tags {
                 font-size: .8em;
