--- a/app/views/company/_search_results.html.slim
+++ b/app/views/company/_search_results.html.slim
@@ -1,7 +1,8 @@
 ul.search-results
 	- if @companies.any?
 	    - @companies.each do |company|
-	        li data-id="#{company.id}"
+	        li data-id="#{company.id}" class="#{'plus' if company.plus}"
+	        	= link_to image_tag('layout/see_details.png'), '#', class: 'see-details'
 	            p.name = company.name
 	            p.phone = company.phone
 	            p.address = company.address
