--- a/public/stylesheets/company.index.less
+++ b/public/stylesheets/company.index.less
@@ -6,13 +6,33 @@
         background-color: #FFF;
         float: left;
         margin: 10px;
-        border: 3px solid #999;
+        border: 2px solid #999;
         .border-radius();
-        padding: 6px 5px;
+        padding: 7px 6px;
         width: 290px;
         height: 110px;
-        .box-shadow(2px 2px 3px rgba(100, 100, 100, .4));
+        .box-shadow(1px 1px 5px rgba(100, 100, 100, .5));
         color: #666;
+
+        .see-details {
+            display: none;
+            float: right;
+            margin-top: -11px;
+        }
+
+        &.plus {
+            background: #FFF url(/images/layout/background_search_results.png) no-repeat center -50px;
+            border-color: #333;
+            .box-shadow(1px 1px 5px rgba(100, 100, 100, 1));
+
+            .see-details {
+                display: block;
+            }
+
+            p {
+                color: #333;
+            }
+        }
 
         p {
             margin-bottom: 4px;
