--- a/app/assets/stylesheets/pie.css
+++ b/app/assets/stylesheets/pie.css
@@ -3,4 +3,4 @@
 .s-action-button, .s-alternative-button,
 .add-on
 
-    { behavior: url(/javascripts/PIE.htc) }
+    { behavior: url(/assets/PIE.htc) }
