--- a/app/views/company/index.html.slim
+++ b/app/views/company/index.html.slim
@@ -1,6 +1,6 @@
 /!== render partial: './advertise'
 header.body.search
-    form.container action="#{search_path}" method='get'
+    form.container action="/" method='get'
         h3 Encontre o que precisa:
         div.input-prepend
             span.add-on = image_tag 'zoom_tool.png', alt: 'Lupa'
