--- a/app/views/company/_search_results.html.erb
+++ b/app/views/company/_search_results.html.erb
@@ -3,7 +3,7 @@
 		<% @companies.each do |company| %>
 			<li data-id="<%= company.id %>" class="<%= 'plus' if company.plus %>">
 				<%= link_to image_tag('layout/see_details.png'), '#', class: 'see-details' %>
-				<p class="name"><%= company.name %></p>
+				<p class="name"><%= company.name_list %></p>
 				<p class="phone"><%= company.phone %></p>
 				<p class="address"><%= company.address %></p>
 				<p class="tags"><%= company.segment_list %><%= " [#{company.product_list}]" unless company.product_list.blank? %></p>
