add spin to search

--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -127,6 +127,7 @@ html, body {
 
                     .add-on {
                         padding: 4px 8px;
+                        width: 27px;
                         height: 30px; }
 
                     input {
