--- a/app/views/company/_search_results.html.erb
+++ b/app/views/company/_search_results.html.erb
@@ -15,7 +15,7 @@
 					Nenhuma empresa foi encontrada.
 				</p>
 				<p class="instructions">
-					Por favor, verifique os termos digitados e tente novamente. Caso a empresa que você procura não esteja cadastrada, envie-nos um e-mail e iremos cadastrá-la para você. Se você for lojista e tenha interesse em anunciar, não hesite, entre em contato também.
+					Por favor, verifique os termos digitados e tente novamente. Caso a empresa que procura não esteja cadastrada, envie-nos um e-mail e iremos cadastrá-la para você: <a href="mailto:fale-com@sirva.me">fale-com@sirva.me</a>
 				</p>
 		</li>
 	<% end %>
