--- a/app/assets/stylesheets/company.index.less
+++ b/app/assets/stylesheets/company.index.less
@@ -14,11 +14,17 @@
         .box-shadow(1px 1px 5px rgba(100, 100, 100, .5));
         color: #666;
 
+        .matched {
+            background-color: @s-green;
+            .border-radius(3px);
+            padding: 3px 5px 2px;
+            text-shadow: 0 1px 0 #fff;
+            color: #000; }
+
         .see-details {
             display: none;
             float: right;
-            margin-top: -11px;
-        }
+            margin-top: -11px; }
 
         &.plus {
             background: #FFF image-url('layout/background_search_results.png') no-repeat center -50px;
@@ -26,13 +32,10 @@
             .box-shadow(1px 1px 5px rgba(100, 100, 100, 1));
 
             .see-details {
-                display: block;
-            }
+                display: block; }
 
             p {
-                color: #333;
-            }
-        }
+                color: #333; }}
 
         p {
             margin-bottom: 4px;
@@ -61,14 +64,9 @@
             &.title {
                 margin-bottom: 30px;
                 font-size: 2.2em;
-                font-weight: bold;
-            }
+                font-weight: bold; }
 
             &.instructions {
                 width: 600px;
                 font-size: 1.3em;
-                line-height: 1.7em;
-            }
-        }
-    }
-                }
+                line-height: 1.7em; }}}}
