--- a/app/views/company/_search_results.html.erb
+++ b/app/views/company/_search_results.html.erb
@@ -1,21 +1,22 @@
 <ul class="search-results">
 	<% if @companies.any? %>
 		<% @companies.each do |company| %>
-			<li data-id="<%= company.id %>" class="result<%= ' plus' if company.plus %>">
-				<%= link_to image_tag('layout/see_details.png'), '#', class: 'see-details' %>
+			<li data-id="<%= company.id %>" class="result">
 				<p class="name"><%= company.name_list %></p>
 				<p class="phone"><%= company.phone %></p>
 				<p class="address"><%= company.address %></p>
-				<p class="tags"><%= company.segment_list %><%= " [#{company.product_list}]" unless company.product_list.blank? %></p>
+				<p class="tags">
+					<%= company.segment_list %>
+					<%= " [#{company.product_list}]" unless company.product_list.blank? %>
+				</p>
 			</li>
 		<% end %>
 	<% else %>
 		<li data-id="0" class="none-companies">
-				<p class="title">
-					Nenhuma empresa foi encontrada.
-				</p>
+				<p class="title">Nenhuma empresa foi encontrada.</p>
 				<p class="instructions">
-					Por favor, verifique os termos digitados e tente novamente. Caso a empresa que procura não esteja cadastrada, envie-nos um e-mail e iremos cadastrá-la para você: <a href="mailto:fale-com@sirva.me">fale-com@sirva.me</a>
+					Por favor, verifique os termos digitados e tente novamente. Caso a empresa que procura não esteja cadastrada, envie-nos um e-mail e iremos cadastrá-la para você:
+					<a href="mailto:fale-com@sirva.me" title="Envie-nos um E-mail. Ficaremos Felizes!">fale-com@sirva.me</a>
 				</p>
 		</li>
 	<% end %>
