--- a/app/views/company/index.html.slim
+++ b/app/views/company/index.html.slim
@@ -1,6 +1,6 @@
 header.body.search
     form.container action="/" method='get'
-        h3 Encontre o que precisa:
+        h3 Encontre o que precisa em Valença:
         div.input-prepend
             span.add-on = image_tag 'zoom_tool.png', alt: 'Lupa'
             input type='text' name='encontrar' value="#{normalize_search_params(params[:encontrar])}" placeholder='Exemplos: pizza, lanche, bar do zé... e aperte ENTER!'
