--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,6 +7,7 @@ html
         = favicon_link_tag '/favicon.png'
         = stylesheet_link_tag 'fonts/fonts'
         = stylesheet_link_tag 'application'
+        == render partial: './metrics'
         /[if lt IE 9]
             = javascript_include_tag 'html5'
     body
