home page spec with js

--- a/app/views/company/index.html.slim
+++ b/app/views/company/index.html.slim
@@ -4,7 +4,8 @@ header.body.search
         div.input-prepend
             span.add-on = image_tag 'zoom_tool.png', alt: 'Lupa'
             input id='search-field' type='text' name='encontrar' value="#{normalize_search_params(params[:encontrar])}" placeholder='Exemplos: pizza, lanche, bar do zé... e aperte ENTER!'
-            input.hide id='submit-search' type='submit'
+            - if Rails.env.test?
+            		input id='submit-search' type='submit'
         == render partial: './addthis'
 div.container.main-content
     == render partial: 'search_results'
