--- a/app/views/company/_search_results.html.erb
+++ b/app/views/company/_search_results.html.erb
@@ -1,7 +1,8 @@
 <ul class="search-results">
 	<% if @companies.any? %>
 		<% @companies.each do |company| %>
-			<li data-id="<%= company.id %>" class="result">
+			<li data-id="<%= company.id %>" class="result<%= ' plus' if company.plus %>">
+				<%= link_to(image_tag('layout/see_details.png'), :academia_equilibrio, class: 'see-details') if company.plus %>
 				<p class="name"><%= company.name_list %></p>
 				<p class="phone"><%= company.phone %></p>
 				<p class="address"><%= company.address %></p>
