fix routing error for favicon.ico

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,7 +4,7 @@ html
         meta charset='utf-8'
         title = page_title
         = csrf_meta_tag
-        = favicon_link_tag '/favicon.png'
+        = favicon_link_tag
         = stylesheet_link_tag 'fonts/fonts'
         = stylesheet_link_tag 'application'
         == render partial: './metrics'
