--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -114,7 +114,7 @@ html, body {
                     width: 690px; }
 
                 h3 {
-                    margin: 15px 0;
+                    margin: 23px 0 5px;
                     font-size: 35px; }
 
                 h4 {
