--- a/app/views/company/index.html.slim
+++ b/app/views/company/index.html.slim
@@ -2,7 +2,7 @@ header.body.search
     form.search-form.container action="/" method='get'
         h3 Encontre o que precisa em Valença:
         div.input-append
-            input id='search-field' type='text' name='encontrar' value="#{normalize_search_params(params[:encontrar])}" placeholder='Exemplos: pizza, lanche, bar do zé... e aperte ENTER!'
+            input id='search-field' type='text' name='encontrar' value="#{normalize_search_params(params[:encontrar])}" placeholder='Exemplos: água, pizza, lanchonete, academia... e clique na lupa »'
             span.add-on = image_submit_tag 'zoom_tool.png', alt: 'Lupa', id: 'submit-search'
         == render partial: './addthis'
 div.container.main-content
