--- a/app/assets/stylesheets/company.index.less
+++ b/app/assets/stylesheets/company.index.less
@@ -40,11 +40,11 @@
                 text-shadow: 1px 1px 1px #ccc; }
 
             &.phone, &.address {
-                font-size: .9em; }
+                font-size: 1em;
+                font-weight: bold }
 
             &.tags {
-                font-size: .8em;
-                font-weight: bold; }}}
+                font-size: .9em }}}
 
     li.none-companies {
         background: image-url('icons/not_found.png') no-repeat;
