--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,6 +2,7 @@ doctype 5
 html
     head
         meta charset='utf-8'
+        meta property='og:image' content='/assets/layout/logo2.png'
         title = page_title
         = csrf_meta_tag
         = favicon_link_tag
